# agentv2

./: .gitignore
agent/: Dockerfile  agent.py  pyproject.toml  quaBackup.py  sonic.py
agent/config/: __init__.py  transport.py
agent/post_processor/: __init__.py  call_session.py  catalog.py  config.py  crm.py  extraction.py  groq_client.py  models.py  pricing.py  processor.py  runner.py  transcript.py
agent/post_processor/leadsquared/: __init__.py  client.py  config.py  sync.py
agent/prompts/: __init__.py  system.py  tool_calls.py
agent/reference/: medDetail.md  medDetailop.md
agent/scripts/: test_leadsquared.py
agent/services/: __init__.py  google_llm.py  hold_phrases.py  metrics_log.py  tool_call_input_gate.py
agent/tools/: __init__.py  _announce.py  registry.py
agent/tools/medicine_alternatives/: __init__.py  alternatives.py  handler.py  schema.py
agent/tools/medicine_compare/: __init__.py  compare.py  handler.py  schema.py
agent/tools/medicine_detail/: __init__.py  bulk_pricing.py  db.py  guards.py  handler.py  schema.py  search.py  semantic.py  side_effects.py
agent/transports/: __init__.py  launch.py  ngrok.py
agent/transports/daily/: __init__.py  config.py  room.py  routes.py  session.py
