[project]
name = "exotel-chatbot-dial-in"
version = "0.1.0"
description = "Exotel dial-in example for Pipecat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pipecat-ai[websocket,cartesia,openai,silero,deepgram,runner,google,webrtc]>=1.4.0",
  "pipecatcloud>=0.2.4",
  "aiortc",
  "pymongo",
  "pyngrok",
  "requests",
  "python-dotenv",
  "loguru",
  "asyncpg>=0.31.0",
  "fastembed>=0.8.0",
  "groq>=0.22.0",
  "psycopg2-binary>=2.9.10",
]
